modification structure fichiers, figures et liens dans rapport

--- a/rapport/rapport.htm
+++ b/rapport/rapport.htm
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>IFT 3911- Devoir2</h1>
+    <h1>IFT 3911- Devoir 2</h1>
     <h2>Information générale</h2>
 
     <p><b>Nom:</b> Mohammad Erfanian Azmoudeh</p>
@@ -63,31 +63,34 @@
         </thead>
     </table>
     <h2>1 Modèle de conception du domaine</h2>
-    <h3>1.1: Diagramme de classes</h3>
+    <h3>1.1. Diagramme de classes</h3>
     <p>Le diagramme de classes est présenté ci-dessous:
         <br/><br/>
-        <img src="" alt="image of diag of conceptual class" />
+        <img src="design/diagramme_classes.png" alt="image of diag of conceptual class" />
         <br/><br/> Le diagramme de classes en .vpp est disponible
-        <a href="" download>ici</a>.</p>
+        <a href="design/ift3911_tp2_diagramme_classes.vpp" download>ici</a>.</p>
     <br/>
-    <h3>1.2 Diagrammes de séquence système</h3>
+	<h3>1.2. Diagramme de paquets</h3>
+	<p>Le diagramme de paquets est présenté ci-dessous:
+	<br/><br/>
+		<img src="design/diagramme_paquets.png" alt="image of diag of conceptual class" />
+        <br/><br/> Le diagramme de classes en .vpp est disponible
+        <a href="design/ift3911_tp2_diagramme_package.vpp" download>ici</a>.</p>
+    <br/>
+    <h3>1.3. Diagrammes de séquence système</h3>
     <p>Les intéractions de l'usager Client avec le système sont décrites par les images suivantes:</p>
     <h5>- Vérification des vols/itineraires disponibles</h5>
-    <img src="" alt="image of diag sequence" />
+    <img src="design/dss_verifier_trajets.png" alt="image of diag sequence" />
     <h5>- Réservation un siège/cabine</h5>
-    <img src="" alt="image of diag sequence" />
+    <img src="design/dss_reserver_place.png" alt="image of diag sequence" />
     <h5>- Paiement d'un siège/cabine</h5>
-    <img src="" alt="image of diag sequence" />
-    <h5>- Changement de réservation non-confirmée</h5>
-    <img src="" alt="image of diag sequence" />
-    <h5>- Changement de réservation confirmée</h5>
-    <img src="" alt="image of diag sequence" />
-    <h5>- Annulation de réservation non-confirmée</h5>
-    <img src="" alt="image of diag sequence" />
-    <h5>- Annulation de réservation confirmée</h5>
-    <img src="" alt="image of diag sequence" />
+    <img src="design/dss_payer_place.png" alt="image of diag sequence" />
+    <h5>- Changement de réservation</h5>
+    <img src="design/dss_changer_reservation.png" alt="image of diag sequence" />
+    <h5>- Annulation de réservation</h5>
+    <img src="design/dss_annuler_reservation.png" alt="image of diag sequence" />
     <p>Les diagrammes de séquence système volet client en .vpp sont disponibles
-        <a href="" download>ici</a>.</p>
+        <a href="design/ift3911_tp2_dss_client.vpp" download>ici</a>.</p>
     <br/>
     <h3>1.3 Identification les modules a usage général et réutilisables</h3>
     <h2>2 Contraintes OCL</h2>
