correction titre errone

--- a/rapport/rapport.htm
+++ b/rapport/rapport.htm
@@ -81,9 +81,9 @@
     <p>Les intéractions de l'usager Client avec le système sont décrites par les images suivantes:</p>
     <h5>- Vérification des vols/itineraires disponibles</h5>
     <img src="design/dss_verifier_trajets.png" alt="image of diag sequence" />
-    <h5>- Réservation un siège/cabine</h5>
+    <h5>- Réservation de siège/cabine</h5>
     <img src="design/dss_reserver_place.png" alt="image of diag sequence" />
-    <h5>- Paiement d'un siège/cabine</h5>
+    <h5>- Paiement de siège/cabine</h5>
     <img src="design/dss_payer_place.png" alt="image of diag sequence" />
     <h5>- Changement de réservation</h5>
     <img src="design/dss_changer_reservation.png" alt="image of diag sequence" />
