correction diagramme paquets

--- a/rapport/rapport.htm
+++ b/rapport/rapport.htm
@@ -696,11 +696,11 @@
             </tr>
 			<tr>
                 <td>Transactions</td>
-                <td>0</td>
+                <td>1</td>
                 <td>1</td>
 				<td>1</td>
 				<td>4</td>
-				<td>0</td>
+				<td>0.5</td>
 				<td>0.25</td>
             </tr>
 			<tr>
@@ -732,7 +732,7 @@
 		<li>Transports dépend de Gestion.</li>
 		<li>Réservations dépend de Gestion, de Transactions et de Usagers.</li>
 		<li>Usagers dépend de Gestion.</li>
-		<li>Transactions ne dépend d'aucun autre paquet.</li>
+		<li>Transactions dépend de Réservations.</li>
 		<li>Gestion ne dépend d'aucun autre paquet.</li>
 	</ul>
 	<p>On observe que le principe est respecté dans notre système. </p>
